
21.3.0
	Date: xx/xx/2019
	What's new
		1. (medium): new feature to read test logs line by line from REST API
	Issues Fixed
		1. (medium): xxxx